k8s/deployment-back-end.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: birds-app-back-end-deployment
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: birds-app-back-end-ripleymj
  template:
    metadata:
      labels:
        app: birds-app-back-end-ripleymj
    spec:
      containers:
        - image: 'ghcr.io/ripleymj/birds-app-back-end:81c1bd521dfe7393b53869bcdfa9bf6484be1952'
          name: birds-back-front-end
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "32Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
