k8s/deployment-front-end.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: birds-app-front-end-deployment
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: birds-app-front-end-ripleymj
  template:
    metadata:
      labels:
        app: birds-app-front-end-ripleymj
    spec:
      containers:
        - image: 'ghcr.io/ripleymj/birds-app-front-end:7f22f577b548ad77ace974266b7b5f833023eb3c'
          name: birds-app-front-end
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "32Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
