k8s/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uug-demo-api
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: uug-demo-api
  template:
    metadata:
      labels:
        app: uug-demo-api
    spec:
      containers:
        - image: 'ghcr.io/ripleymj/uug-demo-api:99dcb750f3c45ac4056f2193d91321493457788b'
          name: uug-demo-api
          ports:
            - containerPort: 3000
